--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,19 @@
     <artifactId>Gaodemap</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <dependencies>
+
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>4.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>4.0.0</version>
+    </dependency>
+    </dependencies>
 
     
 </project>
